fix overflow problem

--- a/src/app.scss
+++ b/src/app.scss
@@ -16,6 +16,7 @@
     > * {
       width: 100%;
       height: calc(100vh - 70px);
+      scroll-snap-align: start;
     }
   }
 }
