--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -26,6 +26,7 @@
       margin-top: 12px;
       @include mobile {
         margin-bottom: 5px;
+        overflow: hidden;
       }
     }
 
